# pyFRF

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  Showcase pyFRF.ipynb  Showcase.ipynb  fft_tools.py  frf.py  pyFRF.py  pyproject.toml  readme.rst  requirements.txt  setup.py
.github/workflows/: release-and-publish-to-pypi.yml  release-to-pypi.yml
data/: measurements_1.npy  measurements_2.npy  measurements_3.npy  measurements_4.npy  measurements_5.npy
docs/: requirements.txt
docs/source/: Showcase.nblink  code_documentation.rst  conf.py  index.rst  tutorial.rst
tests/: model.py  test_all.py  test_fft_tools.py  test_pyFRF.py
